# cpp-rag-engine

./: CMakeLists.txt  README.md
.rag_store/: index.jsonl  meta.json
data/: sample.txt
src/: io_utils.cpp  io_utils.h  llama_embedder.cpp  llama_embedder.h  llama_generator.cpp  llama_generator.h  main.cpp  minijson.cpp  minijson.h  ollama_client.cpp  ollama_client.h  text_chunker.cpp  text_chunker.h  vector_store.cpp  vector_store.h
